[package]
name = "bp-moonbeam"
description = "Primitives of Moonbeam parachain runtime."
version = "0.6.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[lints]
workspace = true

[dependencies]

libsecp256k1 = { version = "0.7", default-features = false, features = ["hmac"] }
sha3 = { version = "0.10", default-features = false }
impl-serde = { version = "0.4.0", default-features = false }
log = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Bridge Dependencies

bp-bridge-hub-cumulus = { workspace = true }
bp-messages = { workspace = true }
bp-runtime = { workspace = true }

# Substrate Based Dependencies

frame-support = { workspace = true }
sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-bridge-hub-cumulus/std",
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std"
]
